--- a/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
+++ b/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
@@ -22,52 +22,54 @@
 </section>
 
 
-@using (Html.BeginForm("CostCenterManagerMap", "BillRequisition", FormMethod.Post))
+@using (Html.BeginForm("CostCenterManagerMap", "BillRequisition", FormMethod.Post, new { id = "costCenterMapFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
     <section class="content">
         <div class="row">
             <div class="box">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.AntiForgeryToken()
-                @Html.HiddenFor(x => x.CompanyId, new { id = "CompanyFK" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                @Html.HiddenFor(model => model.CostCenterManagerMapId, new { Value = "", id = "CostCenterManagerMapId" })
+                @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionId" })
+                @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
                 <div class="box-danger">
                     <div class="box-header">
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
-                        @using (Html.BeginForm("CostCenterManagerMap", "BillRequisition", FormMethod.Post))
-                        {
-                            @Html.AntiForgeryToken()
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            @Html.HiddenFor(x => x.CompanyId, new { id = "CompanyFK" })
 
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label asp-for="ProjectId">Select Project</label>
-                                        @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.Projects, "ProjectId", "ProjectName"), "-- Select Project --", new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
-                                    </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label asp-for="ProjectId">Select Project</label>
+                                    @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.Projects, "ProjectId", "ProjectName"), "-- Select Project --", new { id = "selectProject", @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
                                 </div>
-
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label asp-for="EmployeeRowId">Select Manager</label>
-                                        @Html.DropDownListFor(model => model.EmployeeRowId, new SelectList(Model.Employees, "Id", "Name"), "-- Select Manager --", new { @class = "form-control" })
-
-                                    </div>
-                                    @Html.ValidationMessageFor(model => model.EmployeeRowId, "", new { @class = "text-danger" })
-                                </div>
-
-                                <div class="col-md-2">
-                                    <div class="form-group" style="margin-top: 25px !important">
-                                        <button type="submit" class="btn btn-primary w-100" style="width: 100% !important">Submit</button>
-                                    </div>
-                                </div>
-
                             </div>
-                        }
+
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label asp-for="EmployeeRowId">Select Manager</label>
+                                    @Html.DropDownListFor(model => model.EmployeeRowId, new SelectList(Model.Employees, "Id", "Name"), "-- Select Manager --", new { id = "selectEmployee", @class = "form-control" })
+
+                                </div>
+                                @Html.ValidationMessageFor(model => model.EmployeeRowId, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="col-md-4">
+                                <div class="form-group" style="margin-top: 25px !important">
+                                    <div class="col-md-5">
+                                        <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
+                                    </div>
+                                    <div class="col-md-7">
+                                        <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -76,7 +78,7 @@
 
 }
 
-<section class="content" style="margin-top: -135px !important">
+<section class="content" style="margin-top: -110px !important">
     <div class="row">
         <div class="box">
             <div class="box-danger">
@@ -101,9 +103,11 @@
                                     <tr>
                                         <td>
                                             @(++sl)
+                                            <input type="hidden" id="costCenterId_@item.CostCenterManagerMapId" name="CostCenterId" value="@item.CostCenterId" />
+                                            <input type="hidden" id="costCenterManagerId_@item.CostCenterManagerMapId" name="CostCenterManagerId" value="@item.ManagerId" />
                                         </td>
-                                        <td id="tdDamageTypeForName_@item.CostCenterManagerMapId">@Model.Projects.FirstOrDefault(c=> c.ProjectId == item.CostCenterId).ProjectName</td>
-                                        <td id="tdDamageTypeName_@item.CostCenterManagerMapId">@Model.Employees.FirstOrDefault(c => c.Id == item.ManagerId).Name</td>
+                                        <td id="tdProjectName_@item.CostCenterManagerMapId">@Model.Projects.FirstOrDefault(c => c.ProjectId == item.CostCenterId).ProjectName</td>
+                                        <td id="tdEmployeeName_@item.CostCenterManagerMapId">@Model.Employees.FirstOrDefault(c => c.Id == item.ManagerId).Name</td>
                                         <td>
                                             <a id="@item.CostCenterManagerMapId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
@@ -126,51 +130,34 @@
 @section scripts {
     <script type="text/javascript">
 
-        $(document.body).on("change", "#txtDamageTypeName", function () {
-            var unitId = $("#DamageTypeId").val();
-            if (unitId == null || unitId == "" || unitId == undefined) { unitId = 0 };
-            var damageTypeFroId = $("#ddlEnumDamageTypeForId").val();
-            if (damageTypeFroId == null || damageTypeFroId == "" || damageTypeFroId == undefined) { damageTypeFroId = 0 };
-            var value = $(this).val();
-            var param = { name: value, damageTypeForId: damageTypeFroId, id: unitId };
-            var url = "/Configuration/IsDamageTypeNameExist";
-            $.post(url, param, function (rData) {
-                $('#nameExist').text("");
-                if (rData === true) {
-                    var msg = "Sorry, This " + value + " name already exist!";
-                    $('#nameExist').text(msg);
-                    return;
-                }
-            });
-        });
-
         $(document).ready(function () {
             $('.formValidator').bootstrapValidator();
         });
 
-
         function makeEditble(elem) {
             if (elem !== null) {
                 var rowId = elem.id;
-                $('#DamageTypeId').val(rowId);
+                $('#CostCenterManagerMapId').val(rowId);
                 $('#ActionId').val(2);
                 $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Update");
-                $('#txtDamageTypeName').val($('#tdDamageTypeName_' + rowId).text().trim());
-                //var damagetTFor = $('#valDamageTypeFor').val();
-                //$('#ddlEnumDamageTypeForId').val(damagetTFor).trigger('change');
-                $('#ddlEnumDamageTypeForId').val($('#damageTypeFor_' + rowId).val().trim()).trigger('change');
+                $('#selectProject').val($('#costCenterId_' + rowId).val().trim()).trigger('change');
+                $('#selectEmployee').val($('#costCenterManagerId_' + rowId).val().trim()).trigger('change');
                 window.scrollTo({ top: 0, behavior: 'smooth' });
-
             }
         }
 
-
+        function makeDeletable(id) {
+            if (id !== null) {
+                $('#DamageTypeIdDelete').val(id);
+                $('#ActionIdDelete').val(3);
+                $("#CompanyFKDelete").val("@Model.CompanyFK");
+            }
+        }
 
         function resetForm() {
-            $('#commonDamageTypeFormId')[0].reset();
+            $('#costCenterMapFormId')[0].reset();
             $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
 
         }
-
     </script>
 }
