--- a/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
+++ b/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
@@ -60,11 +60,11 @@
 
                             <div class="col-md-4">
                                 <div class="form-group" style="margin-top: 25px !important">
-                                    <div class="col-md-5">
-                                        <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
+                                    <div class="col-md-6">
+                                        <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal" style="width: 100% !important">Reset</button>
                                     </div>
-                                    <div class="col-md-7">
-                                        <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
+                                    <div class="col-md-6">
+                                        <button type="submit" id="btnSave" class="btn btn-primary btn-block" style="width: 100% !important"><i class='fa fa-edit'></i> Add</button>
                                     </div>
                                 </div>
                             </div>
