--- a/KGERP/Views/BillRequisition/BillRequisitionItem.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model KGERP.Service.ServiceModel.BillRequisitionTypeModel
+﻿@model KGERP.Service.ServiceModel.BillRequisitionItemModel
 @{
     ViewData["Title"] = "DamageType";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -11,7 +11,7 @@
 </style>
 <section class="content-header">
     <h1>
-        Requisition Type
+        Requisition Item
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
@@ -19,7 +19,7 @@
     </ol>
 </section>
 
-@using (Html.BeginForm("BillRequisitionType", "BillRequisition", FormMethod.Post, new { id = "BillRequisitionTypeFormId", @class = "formValidator", onreset = "resetDDL();" }))
+@using (Html.BeginForm("BillRequisitionItem", "BillRequisition", FormMethod.Post, new { id = "BillRequisitionItemFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
     <section class="content">
         <div class="row">
@@ -34,19 +34,19 @@
                                 </div>*@
                             <!-- /.box-header -->
                             <div class="box-body">
-                                @Html.HiddenFor(model => model.ID, new { Value = "", id = "BillRequisitionTypeId" })
+                                @Html.HiddenFor(model => model.ID, new { Value = "", id = "BillRequisitionItemId" })
                                 @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionId" })
                                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
                                 <div class="form-group">
                                     <label asp-for="Name" class="form-control-label">Name:</label>
-                                    @Html.TextBoxFor(model => model.Name, new { id = "txtRequisitionTypeName", @class = "form-control", @placeholder = "Requisition Type Name", required = "true" })
+                                    @Html.TextBoxFor(model => model.Name, new { id = "txtRequisitionItemName", @class = "form-control", @placeholder = "Requisition Item Name", required = "true" })
                                     @Html.ValidationMessageFor(model => model.Name, "", new { id = "nameExist", @class = "text-danger" })
                                 </div>
 
                                 <div class="form-group">
                                     <label asp-for="Description" class="form-control-label">Description:</label>
-                                    @Html.TextAreaFor(model => model.Description, new { id = "txtRequisitionTypeDescription", @class = "form-control", @placeholder = "Requisition Type Description", required = "true" })
+                                    @Html.TextAreaFor(model => model.Description, new { id = "txtRequisitionItemDescription", @class = "form-control", @placeholder = "Requisition Item Description", required = "true" })
                                     @Html.ValidationMessageFor(model => model.Description, "", new { id = "nameExist", @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
@@ -83,19 +83,19 @@
                                         </thead>
                                         @{int sl = 0;}
                                         <tbody>
-                                            @foreach (var item in Model.BillRequisitionTypes)
+                                            @foreach (var item in Model.BillRequisitionItems)
                                             {
                                                 <tr>
                                                     <td>
                                                         @(++sl)
-                                                        <input type="hidden" id="requisitionType_@item.BillRequisitionTypeId" name="BillRequisitionTypeId" value="@item.BillRequisitionTypeId" />
+                                                        <input type="hidden" id="requisitionItem_@item.BillRequisitionItemId" name="BillRequisitionItemId" value="@item.BillRequisitionItemId" />
                                                     </td>
-                                                    <td id="tdRequisitionTypeName_@item.BillRequisitionTypeId">@item.Name</td>
-                                                    <td id="tdRequisitionTypeDescription_@item.BillRequisitionTypeId">@item.Description</td>
+                                                    <td id="tdRequisitionItemName_@item.BillRequisitionItemId">@item.Name</td>
+                                                    <td id="tdRequisitionItemDescription_@item.BillRequisitionItemId">@item.Description</td>
                                                     <td>
-                                                        <a id="@item.BillRequisitionTypeId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
+                                                        <a id="@item.BillRequisitionItemId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
-                                                        <a id="@item.BillRequisitionTypeId" onclick="makeDeletable(@item.BillRequisitionTypeId);" class="linkPointer" data-toggle="modal" data-target="#BillRequisitionTypeDeleteModal" title="Delete"
+                                                        <a id="@item.BillRequisitionItemId" onclick="makeDeletable(@item.BillRequisitionItemId);" class="linkPointer" data-toggle="modal" data-target="#BillRequisitionItemDeleteModal" title="Delete"
                                                            data-placement="top">
                                                             <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
                                                         </a>
@@ -118,21 +118,21 @@
     </section>
 }
 
-@using (Html.BeginForm("BillRequisitionType", "BillRequisition", FormMethod.Post, new { id = "BillRequisitionTypeFormId", @class = "formValidator", onreset = "resetDDL();" }))
+@using (Html.BeginForm("BillRequisitionItem", "BillRequisition", FormMethod.Post, new { id = "BillRequisitionItemFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    @Html.HiddenFor(model => model.BillRequisitionTypeId, new { Value = "", id = "BillRequisitionTypeIdDelete" })
+    @Html.HiddenFor(model => model.BillRequisitionItemId, new { Value = "", id = "BillRequisitionItemIdDelete" })
     @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionIdDelete" })
     @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFKDelete" })
 
-    <div class="modal fade" id="BillRequisitionTypeDeleteModal" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
+    <div class="modal fade" id="BillRequisitionItemDeleteModal" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
                         &times;
                     </button>
-                    <h5 class="modal-title"><b>Bill Requisition Type Delete</b></h5>
+                    <h5 class="modal-title"><b>Bill Requisition Item Delete</b></h5>
 
                 </div>
                 <div class="modal-body">
@@ -159,26 +159,25 @@
         function makeEditble(elem) {
             if (elem !== null) {
                 var rowId = elem.id;
-                $('#requisitionType_').val(rowId);
+                $('#requisitionItem_').val(rowId);
                 $('#ActionId').val(2);
                 $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Update");
-                $('#txtRequisitionTypeName').val($('#tdRequisitionTypeName_' + rowId).text().trim());
-                $('#txtRequisitionTypeDescription').val($('#tdRequisitionTypeDescription_' + rowId).text().trim());
+                $('#txtRequisitionItemName').val($('#tdRequisitionItemName_' + rowId).text().trim());
+                $('#txtRequisitionItemDescription').val($('#tdRequisitionItemDescription_' + rowId).text().trim());
                 window.scrollTo({ top: 0, behavior: 'smooth' });
-
             }
         }
 
         function makeDeletable(id) {
             if (id !== null) {
-                $('#BillRequisitionTypeIdDelete').val(id);
+                $('#BillRequisitionItemIdDelete').val(id);
                 $('#ActionIdDelete').val(3);
                 $("#CompanyFKDelete").val("@Model.CompanyFK");
             }
         }
 
         function resetForm() {
-            $('#BillRequisitionTypeFormId')[0].reset();
+            $('#BillRequisitionItemFormId')[0].reset();
             $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
         }
     </script>
