Bill of quotation cread and read done

--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -123,7 +123,6 @@
                     </div>
 
                     <div class="row">
-
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Select Project :</label>
@@ -147,6 +146,9 @@
                                 @Html.ValidationMessageFor(model => model.DetailModel.Description, "", new { @class = "text-danger" })
                             </div>
                         </div>
+                    </div>
+
+                    <div class="row">
 
                         <div class="col-md-6">
                             <div class="form-group">
