--- a/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
+++ b/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
@@ -1,6 +1,6 @@
-﻿@model KGERP.Service.ServiceModel.BillRequisitionItemModel
+﻿@model KGERP.Service.ServiceModel.BillRequisitionBoqModel
 @{
-    ViewData["Title"] = "DamageType";
+    ViewData["Title"] = "Bill of Quotation";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,26 +11,15 @@
 </style>
 <section class="content-header">
     <h1>
-        @if (Model.BillRequisitionItemId > 0)
-        {
-            <span>
-                Requisition Item/Material
-            </span>
-        }
-        else
-        {
-            <span>
-                Requisition Item/Material
-            </span>
-        }
+        Bill of Quotation
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Requisition Material</li>
+        <li class="active">Requisition BOQ</li>
     </ol>
 </section>
 
-@using (Html.BeginForm("BillRequisitionItem", "BillRequisition", FormMethod.Post, new { id = "BillRequisitionItemFormId", @class = "formValidator", onreset = "resetDDL();" }))
+@using (Html.BeginForm("BillOfQuotation", "BillRequisition", FormMethod.Post, new { id = "BillOfQuotationFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
     <section class="content">
         <div class="row">
@@ -45,19 +34,19 @@
                                 </div>*@
                             <!-- /.box-header -->
                             <div class="box-body">
-                                @Html.HiddenFor(model => model.ID, new { Value = "", id = "BillRequisitionItemId" })
+                                @Html.HiddenFor(model => model.ID, new { Value = "", id = "BoQItemId" })
                                 @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionId" })
                                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
                                 <div class="form-group">
                                     <label asp-for="Name" class="form-control-label">Name:</label>
-                                    @Html.TextBoxFor(model => model.Name, new { id = "txtRequisitionItemName", @class = "form-control", @placeholder = "Requisition Item Name", required = "true" })
+                                    @Html.TextBoxFor(model => model.Name, new { id = "txtRequisitionBoqName", @class = "form-control", @placeholder = "Requisition BoQ Name", required = "true" })
                                     @Html.ValidationMessageFor(model => model.Name, "", new { id = "nameExist", @class = "text-danger" })
                                 </div>
 
                                 <div class="form-group">
                                     <label asp-for="Description" class="form-control-label">Description:</label>
-                                    @Html.TextAreaFor(model => model.Description, new { id = "txtRequisitionItemDescription", @class = "form-control", @placeholder = "Requisition Item Description", required = "true" })
+                                    @Html.TextAreaFor(model => model.Description, new { id = "txtRequisitionBoqDescription", @class = "form-control", @placeholder = "Requisition BoQ Description", required = "true" })
                                     @Html.ValidationMessageFor(model => model.Description, "", new { id = "nameExist", @class = "text-danger" })
                                 </div>
                                 <div class="form-group">
@@ -93,27 +82,27 @@
                                             </tr>
                                         </thead>
                                         @{int sl = 0;}
-                                        <tbody>
-                                            @foreach (var item in Model.BillRequisitionItems)
-                                            {
-                                                <tr>
-                                                    <td>
-                                                        @(++sl)
-                                                        <input type="hidden" id="requisitionItem_@item.BillRequisitionItemId" name="BillRequisitionItemId" value="@item.BillRequisitionItemId" />
-                                                    </td>
-                                                    <td id="tdRequisitionItemName_@item.BillRequisitionItemId">@item.Name</td>
-                                                    <td id="tdRequisitionItemDescription_@item.BillRequisitionItemId">@item.Description</td>
-                                                    <td>
-                                                        <a id="@item.BillRequisitionItemId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
+                                    <tbody>
+                                        @foreach (var item in Model.BillBoQItems)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @(++sl)
+                                                    <input type="hidden" id="requisitionItem_@item.BoQItemId" name="BillRequisitionItemId" value="@item.BoQItemId" />
+                                                </td>
+                                                <td id="tdRequisitionItemName_@item.BoQItemId">@item.Name</td>
+                                                <td id="tdRequisitionItemDescription_@item.BoQItemId">@item.Description</td>
+                                                <td>
+                                                    <a id="@item.BoQItemId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
-                                                        <a id="@item.BillRequisitionItemId" onclick="makeDeletable(@item.BillRequisitionItemId);" class="linkPointer" data-toggle="modal" data-target="#BillRequisitionItemDeleteModal" title="Delete"
-                                                           data-placement="top">
-                                                            <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                            }
-                                        </tbody>
+                                                    <a id="@item.BoQItemId" onclick="makeDeletable(@item.BoQItemId);" class="linkPointer" data-toggle="modal" data-target="#BillRequisitionItemDeleteModal" title="Delete"
+                                                       data-placement="top">
+                                                        <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
                                     </table>
                                 </div>
 
@@ -129,10 +118,10 @@
     </section>
 }
 
-@using (Html.BeginForm("BillRequisitionItem", "BillRequisition", FormMethod.Post, new { id = "BillRequisitionItemFormId", @class = "formValidator", onreset = "resetDDL();" }))
+@using (Html.BeginForm("BillOfQuotation", "BillRequisition", FormMethod.Post, new { id = "BillOfQuotationFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    @Html.HiddenFor(model => model.BillRequisitionItemId, new { Value = "", id = "BillRequisitionItemIdDelete" })
+    @Html.HiddenFor(model => model.BoQItemId, new { Value = "", id = "BoQItemId" })
     @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionIdDelete" })
     @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFKDelete" })
 
@@ -143,7 +132,7 @@
                     <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
                         &times;
                     </button>
-                    <h5 class="modal-title"><b>Bill Requisition Item Delete</b></h5>
+                    <h5 class="modal-title"><b>Bill of Quotattion Delete</b></h5>
 
                 </div>
                 <div class="modal-body">
@@ -167,28 +156,10 @@
             $('.formValidator').bootstrapValidator();
         });
 
-        function makeEditble(elem) {
-            if (elem !== null) {
-                var rowId = elem.id;
-                $('#requisitionItem_').val(rowId);
-                $('#ActionId').val(2);
-                $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Update");
-                $('#txtRequisitionItemName').val($('#tdRequisitionItemName_' + rowId).text().trim());
-                $('#txtRequisitionItemDescription').val($('#tdRequisitionItemDescription_' + rowId).text().trim());
-                window.scrollTo({ top: 0, behavior: 'smooth' });
-            }
-        }
 
-        function makeDeletable(id) {
-            if (id !== null) {
-                $('#BillRequisitionItemIdDelete').val(id);
-                $('#ActionIdDelete').val(3);
-                $("#CompanyFKDelete").val("@Model.CompanyFK");
-            }
-        }
 
         function resetForm() {
-            $('#BillRequisitionItemFormId')[0].reset();
+            $('#BillOfQuotationFormId')[0].reset();
             $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
         }
     </script>
