--- a/KGERP/Views/BillRequisition/BillRequisitionType.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionType.cshtml
@@ -11,11 +11,22 @@
 </style>
 <section class="content-header">
     <h1>
-        Requisition Type
+        @if (Model.BillRequisitionTypeId > 0)
+        {
+        <span>
+            Requisition Type
+        </span>
+        }
+        else
+        {
+        <span>
+            Requisition Type
+        </span>
+        }
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Requisition Information</li>
+        <li class="active">Requisition Type</li>
     </ol>
 </section>
 
