--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -316,7 +316,7 @@
 
                     </div>
 
-                    @if (Model.BillRequisitionMasterId > 0)
+                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId == EnumBillRequisitionStatus.Draft)
                     {
                         <div class="box-footer">
 
