--- a/KGERP/Views/BillRequisition/PMBRReceivedList.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRReceivedList.cshtml
@@ -1,8 +1,8 @@
-﻿@model KGERP.Service.ServiceModel.DamageMasterModel
+﻿@model KGERP.Service.ServiceModel.BillRequisitionMasterModel
 @using KGERP.Utility;
 
 @{
-    ViewData["Title"] = "Dealer Damage Received List";
+    ViewData["Title"] = "Project Manager Requisition Approval List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int sl = 0;
@@ -18,7 +18,7 @@
 <section class="content-header">
     <h1>
         <span>
-            Customer to Dealer Damage Received List
+           Project Manager Requisition Approval List
         </span>
 
     </h1>
@@ -38,16 +38,16 @@
             <div class="box">
                 <div class="box-danger">
                     <div class="box-body">
-                        @using (Html.BeginForm("CustomerDamageMasterReceivedSearch", "Damage", FormMethod.Post, new { id = "dealerReceivedListFormId", @class = "formValidator" }))
+                        @using (Html.BeginForm("PMBillRequisitionMasterReceivedSearch", "BillRequisition", FormMethod.Post, new { id = "dealerReceivedListFormId", @class = "formValidator" }))
                         {
-                            @Html.HiddenFor(model => model.CompanyId, new { id = "CompanyId" })
+                            @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyId" })
 
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         @Html.Label("Status:", htmlAttributes: new { @class = "control-label" })
                                         <br />
-                                        @Html.DropDownListFor(model => model.StatusId, Model.EnumDamageStatusList as SelectList, "==Select Status==", new { id = "ddlStatusEnumFK", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
+                                        @Html.DropDownListFor(model => model.StatusId, Model.EnumBRStatusList as SelectList, "==Select Status==", new { id = "ddlStatusEnumFK", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
                                         @Html.ValidationMessageFor(model => model.StatusId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -87,8 +87,10 @@
                                     <tr>
                                         <th>SL</th>
                                         <th>Date</th>
-                                        <th>Dealer</th>
-                                        <th>Customer</th>
+                                        <th>Req. No</th>
+                                        <th>Req. Type</th>
+                                        <th>P. Type</th>
+                                        <th>Project </th>
                                         <th>Status</th>
                                         <th>Action</th>
                                         <th>Change Status</th>
@@ -101,39 +103,41 @@
 
                                         string statusTitle = "";
 
-                                        if (item.StatusId != EnumDamageStatus.Received)
+                                        if (item.StatusId != EnumBillRequisitionStatus.Approved)
                                         { statusTitle = "Receive"; }
 
-                                        if (item.StatusId == EnumDamageStatus.Received)
+                                        if (item.StatusId == EnumBillRequisitionStatus.Approved)
                                         { statusTitle = "Undo Receive"; }
 
                                         #endregion
 
                                         <tr>
                                             <th>@(++sl)</th>
-                                            <td>@item.OperationDate.ToString("dd-MM-yyyy")</td>
-                                            <td>@item.DealerName</td>
-                                            <td>@item.CustomerName</td>
+                                            <td>@item.BRDate.ToString("dd-MM-yyyy")</td>
+
+
+                                            <td>@item.BillRequisitionNo</td>
+                                            <td>@item.BRTypeName</td>
+                                            <td>@item.ProjectTypeName</td>
+                                            <td>@item.CostCenterName</td>
+
                                             <td>@item.StatusName</td>
                                             <td>
-                                                @if (item.StatusId == EnumDamageStatus.Received || item.StatusId == EnumDamageStatus.Submitted)
+                                                @if (item.StatusId != EnumBillRequisitionStatus.Draft || item.StatusId == EnumBillRequisitionStatus.Submitted)
                                                 {
-                                                    <a href="~/Damage/CustomerDamageReceivedSlave?companyId=@item.CompanyFK&damageMasterId=@item.DamageMasterId" title="Details"><i class="glyphicon glyphicon-new-window"></i></a>
+                                                    <a id="@item.BillRequisitionMasterId" onclick="makeDeletale(@item.BillRequisitionMasterId)" class="linkPointer" data-toggle="modal" data-target="#deleteFoodCustomerOrderModal" title="Delete" data-placement="top"><i class="glyphicon glyphicon-trash" aria-hidden="true"></i></a>
+                                                    <a href="~/BillRequisition/BillRequisitionMasterSlave?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BillRequisitionMasterId" title="Details"><i class="glyphicon glyphicon-new-window"></i></a>
                                                 }
-                                            </td>
-                                            <td>
-                                                @if (item.StatusId == EnumDamageStatus.Received)
+                                                else if (item.StatusId == EnumBillRequisitionStatus.Approved)
                                                 {
-
-
-                                                    <span class="border:1px solid;border-color:#006400;"><i style="color:#006400;">Received</i></span>
-                                                }
-                                                else
-                                                {
-                                                    <a href="~/Damage/CustomerDamageReceivedSlave?companyId=@item.CompanyFK&damageMasterId=@item.DamageMasterId" title="Details">Receive</a>
+                                                    <a href="~/BillRequisition/PMBillRequisitionReceivedSlave?companyId=@item.CompanyFK&damageMasterId=@item.BillRequisitionMasterId" title="Details"><i class="glyphicon glyphicon-new-window"></i></a>
 
                                                 }
+                                                else if (item.StatusId == EnumBillRequisitionStatus.Approved)
+                                                {
+                                                    <span class="border:1px solid;border-color:#006400;"><i style="color:#006400;">@item.StatusName</i></span>
 
+                                                }
                                             </td>
                                         </tr>
                                     }
